--- a/src/index.htm
+++ b/src/index.htm
@@ -7,8 +7,15 @@
 </head>
 
 <body>
-  <h1>Webpack - TypeScript - Scss</h1>
-  <h2>TypeScript Hello World</h2>  
+  <h1>Obligatorisk opgave 3</h1>
+  <h2>David N. Miller</h2>
+  <input type="text" placeholder="Text" id="wordInput"/>
+  <select id="textChange" name="textChange">
+    <option value="toUpper">toUpper</option>
+    <option value="toLower">toLower</option>
+    <option value="individualSpacing">individual Spacing</option>
+  </select>
+  <button id="showNameButton">Show</button>
   <div id="content"></div>
     
   <script src="bundle.js"></script>
